--- a/Automatska_vrata_rampa.html
+++ b/Automatska_vrata_rampa.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-    <title>Konaèni automati</title>
+    <meta charset="utf-8">
+    <title>KonaÄni automati</title>
     <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,15 +24,15 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
                     <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
+                        <a href="Zakljucak.html">ZakljuÄak</a>
                         <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
+                            <a href="Sazetak.html">SaÅ¾etak</a>
+                            <a href="Misljenje.html">MiÅ¡ljenje</a>
                         </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
@@ -44,7 +44,7 @@
         <section>
             <h2>Automatska vrata ili rampa</h2>
             <p>
-                Ovaj primjer upotrebe automata radi pomoæu senzora na dva podruèja. Prvo podruèje je podruèje ispred vrata ili rampe, a drugo podruèje se nalazi iza vrata ili rampe. Za daljnje opisivanje uzet æemo primjer automatskih vrata iako rampa radi na istom principu samo rampu obiæno prolazimo s autima dok æemo vrata proæi osobno pomoæu vlastitih nogu. Kada senzor ispred vrata ne oèitava ništa tada vrata ostaju zatvorena i ne dogağa se ništa, meğutim kada priğemo vratima i senzor oèita da netko stoji ispred vrata prijeæi æe u stanje otvorenih vrata. Ako ostanemo stajati ispred vrata ništa se neæe dogağati te æe vrata ostati otvorena. Kada proğemo vrata i doğemo do podruèja iza vrata tek tada se vrata vraæaju u stanje zatvorenih vrata. Isti princip radi i pri izlasku samo tada prvo se oèitava stanje iza vrata, a nakon toga stanje ispred vrata.
+                Ovaj primjer upotrebe automata radi pomoÄ‡u senzora na dva podruÄja. Prvo podruÄje je podruÄje ispred vrata ili rampe, a drugo podruÄje se nalazi iza vrata ili rampe. Za daljnje opisivanje uzet Ä‡emo primjer automatskih vrata iako rampa radi na istom principu samo rampu obiÄno prolazimo s autima dok Ä‡emo vrata proÄi osobno pomoÄ‡u vlastitih nogu. Kada senzor ispred vrata ne oÄitava niÅ¡ta tada vrata ostaju zatvorena i ne dogaÄ‘a se niÅ¡ta, meÄ‘utim kada priÄ‘emo vratima i senzor oÄita da netko stoji ispred vrata prijeÄ‡i Ä‡e u stanje otvorenih vrata. Ako ostanemo stajati ispred vrata niÅ¡ta se neÄ‡e dogaÄ‘ati te Ä‡e vrata ostati otvorena. Kada proÄ‘emo vrata i doÄ‘emo do podruÄja iza vrata tek tada se vrata vraÄ‡aju u stanje zatvorenih vrata. Isti princip radi i pri izlasku samo tada prvo se oÄitava stanje iza vrata, a nakon toga stanje ispred vrata.
             </p>
 
         </section>
@@ -52,7 +52,7 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
                 <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
