--- a/Literatura.html
+++ b/Literatura.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,11 +28,12 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -40,20 +41,22 @@
         </header>
 
 
+
         <section>
             <h1>Literatura</h1>
             <p>
-             <ul style="text-decoration:none"> 
-<li><a href="http://bits.citrusbyte.com/state-design-pattern-with-ruby">Citrusbytebits. 2015. Finite state machine examples</a> (pokušaj pristupa 18. Studeni 2017).</li>
-<li><a href="https://people.cs.clemson.edu/~goddard/texts/theoryOfComputation/5.pdf">Goddard. People. 17. Studeni 2017. Theory of computation </a> (pokušaj pristupa 17. Studeni 2017).</li>
-<li> <a href="https://www.revitcity.com/downloads.php?action=view&object_id=14410">RevitCity. Kolovoz 2013. Turnstile picture</a> (pokušaj pristupa 24. Studeni 2017).</li>
-<li>Sipser, Michael. Introduction to the theory of computation. Thomson Course Techonolgy, 2006.</li>
-<li> <a href="https://softwareengineering.stackexchange.com/questions/47806/examples-of-finite-state-machines">Softwareengineering. StackExchange. 2015. Finite state machine examples</a> (pokušaj pristupa 17. Studeni 2017).</li>
-<li> <a href="http://whatis.techtarget.com/definition/state-machine">Whatis. Rujan 2005. State machine definition</a> (pokušaj pristupa 13. Studeni 2017).</li>
-<li><a href="https://en.wikipedia.org/wiki/Finite-state_machine#Example:_coin-operated_turnstile">Wikipedia. Studeni 2017. Turnstile</a> (pokušaj pristupa 17. Studeni 2017).</li>
-<li> <a href="https://hr.wikipedia.org/wiki/Mooreov_automat">Wikipedia. 4. Travnja 2013. Moore-ov automat</a> (pokušaj pristupa 24. Studeni 2017).</li>
-<li> <a href="https://en.wikipedia.org/wiki/File:Pac-man.png">Wikipedia. 15. Veljača 2017. Pac-Man </a> (pokušaj pristupa 24. Studeni 2017).<li>
-	</ul>
+                <ul style="text-decoration:none; list-style-type:circle;">
+                    <li><a href="http://bits.citrusbyte.com/state-design-pattern-with-ruby">Citrusbytebits. 2015. Finite state machine examples</a> (pokušaj pristupa 18. Studeni 2017).</li>
+                    <li><a href="https://people.cs.clemson.edu/~goddard/texts/theoryOfComputation/5.pdf">Goddard. People. 17. Studeni 2017. Theory of computation </a> (pokušaj pristupa 17. Studeni 2017).</li>
+                    <li> <a href="https://www.revitcity.com/downloads.php?action=view&object_id=14410">RevitCity. Kolovoz 2013. Turnstile picture</a> (pokušaj pristupa 24. Studeni 2017).</li>
+                    <li>Sipser, Michael. Introduction to the theory of computation. Thomson Course Techonolgy, 2006.</li>
+                    <li> <a href="https://softwareengineering.stackexchange.com/questions/47806/examples-of-finite-state-machines">Softwareengineering. StackExchange. 2015. Finite state machine examples</a> (pokušaj pristupa 17. Studeni 2017).</li>
+                    <li> <a href="http://whatis.techtarget.com/definition/state-machine">Whatis. Rujan 2005. State machine definition</a> (pokušaj pristupa 13. Studeni 2017).</li>
+                    <li><a href="https://en.wikipedia.org/wiki/Finite-state_machine#Example:_coin-operated_turnstile">Wikipedia. Studeni 2017. Turnstile</a> (pokušaj pristupa 17. Studeni 2017).</li>
+                    <li> <a href="https://hr.wikipedia.org/wiki/Mooreov_automat">Wikipedia. 4. Travnja 2013. Moore-ov automat</a> (pokušaj pristupa 24. Studeni 2017).</li>
+                    <li> <a href="https://en.wikipedia.org/wiki/File:Pac-man.png">Wikipedia. 15. Veljača 2017. Pac-Man </a> (pokušaj pristupa 24. Studeni 2017).</li>
+                   
+                </ul>
 
             </p>
 
@@ -63,7 +66,7 @@
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
                 <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
