--- a/Opceniti_primjer.html
+++ b/Opceniti_primjer.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,22 +28,22 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
         <section>
             <h2>Općeniti primjer</h2>
             <p>
-              Upotreba automata u igricama koristi se kada postavimo da računalo igra protiv nas. Jedan od primjera bi bio u nekakvoj ratnoj igrici. Automat bi u tom slučaju imao stanja npr. traži, hodaj, stani, pucaj, ugrožen, bježi. Počeo bi iz stanja traži unutar čega bi tražio naš lik. Dokle god nas ne bi vidio na ulaz od hodaj stizala bi 0 što bi označavalo da nastavi hodati. Dok je na ulazu od hodaj 0 na ulazu od stani, pucaj, ugrožen i bježi će također biti 0 što će označavati da računalni lik ne puca, nije ugrožen te ne mora bježati. Nakon što nas računalo uoči na ulaz od hodaj dolazi 1. Tada na ulaz od stani i pucaj dolaze 1 što označava da računalni lik stane i počne pucati. Na ulaze od ugrožen i bježi u tom trenutku pristizat će 0. U tom stanju ostat će dok život računalnog lika ne pređe granicu od 20% statusa života nakon čega će na ulaz od stani i pucaj dati 0 što označava da prestane pucati i stajati, a na stanje ugrožen bježi šalje ulaze 1 što označava da je računalni lik ugrožen i mora početi bježati.
+                Upotreba automata u igricama koristi se kada postavimo da računalo igra protiv nas. Jedan od primjera bi bio u nekakvoj ratnoj igrici. Automat bi u tom slučaju imao stanja npr. traži, hodaj, stani, pucaj, ugrožen, bježi. Počeo bi iz stanja traži unutar čega bi tražio naš lik. Dokle god nas ne bi vidio na ulaz od hodaj stizala bi 0 što bi označavalo da nastavi hodati. Dok je na ulazu od hodaj 0 na ulazu od stani, pucaj, ugrožen i bježi će također biti 0 što će označavati da računalni lik ne puca, nije ugrožen te ne mora bježati. Nakon što nas računalo uoči na ulaz od hodaj dolazi 1. Tada na ulaz od stani i pucaj dolaze 1 što označava da računalni lik stane i počne pucati. Na ulaze od ugrožen i bježi u tom trenutku pristizat će 0. U tom stanju ostat će dok život računalnog lika ne pređe granicu od 20% statusa života nakon čega će na ulaz od stani i pucaj dati 0 što označava da prestane pucati i stajati, a na stanje ugrožen bježi šalje ulaze 1 što označava da je računalni lik ugrožen i mora početi bježati.
             </p>
 
         </section>
@@ -51,8 +51,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                 <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
