--- a/Sef.html
+++ b/Sef.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,22 +28,22 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
         <section>
             <h2>Sef</h2>
             <p>
-            Automat se koristi i u sefovima. Sef će biti u stanju zaključaj ili otključaj. Kada na ulazu upišemo krivu kombinaciju regularnih izraza sef će ostati u stanju zaključaj ako su vrata sefa zatvorena. U tom stanju sef ostaje sve dok na njegov ulaz odnosno ulaz automata u stanju zaključaj ne dovedemo (upišemo) pravilnu kombinaciju regularnih izraza. Tada se sef otključava te ostaje u tom stanju sve dok su vrata otvorena. Nakon što vrata zatvorimo automat se vraća u početno stanje te zaključava sef. 
+                Automat se koristi i u sefovima. Sef će biti u stanju zaključaj ili otključaj. Kada na ulazu upišemo krivu kombinaciju regularnih izraza sef će ostati u stanju zaključaj ako su vrata sefa zatvorena. U tom stanju sef ostaje sve dok na njegov ulaz odnosno ulaz automata u stanju zaključaj ne dovedemo (upišemo) pravilnu kombinaciju regularnih izraza. Tada se sef otključava te ostaje u tom stanju sve dok su vrata otvorena. Nakon što vrata zatvorimo automat se vraća u početno stanje te zaključava sef.
             </p>
 
         </section>
@@ -51,8 +51,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-              <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
