--- a/Pokretanje_obrtnih_vrata.html
+++ b/Pokretanje_obrtnih_vrata.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,11 +28,12 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -43,17 +44,17 @@
         <section>
             <h2>Pokretanje obrtnih vrata</h2>
             <p>
-              Obrtna vrata rade tako da imaju dva moguća stanja,a to su da vrata mogu biti ili otvorena odnosno mogu se pokrenuti ili zatvorena odnosno zaključana i ne mogu se pokrenuti. Promjena stanja postiže se putem ubacivanja novčića. Kada su vrata u zaključanom stanju mogu se dogoditi još dva moguća stanja. Jedno od stanja je otvaranje vrata bez ubacivanja novčića prilikom čega će automat vrata ostaviti u zaključanom stanju te osobi neće dopustiti prolaz. Drugo stanje prilikom zaključanih vrata je da osoba ubaci novčić prilikom čega će vrata(automat) prijeći u stanje otvorenih vrata te dopustiti prolaz osobi. U otvorenom stanju također su moguća još dva stanja. Jedno od tih stanja je da osoba ponovno ubaci novčić prilikom čega automat neće napraviti ništa te će i dalje ostati u otvorenom stanju, a drugo stanje je da osoba nakon što ubaci novčić i prođe kroz vrata. Tada automat ponovno prelazi u stanje zatvorenih i zaključanih vrata nakon čega čeka ponovno ubacivanje novčića.
-            <img src="Obrtna_vrata.jpg" alt="Slika iz igrice Pac-man" style="height:auto;">
-</p>
+                Obrtna vrata rade tako da imaju dva moguća stanja,a to su da vrata mogu biti ili otvorena odnosno mogu se pokrenuti ili zatvorena odnosno zaključana i ne mogu se pokrenuti. Promjena stanja postiže se putem ubacivanja novčića. Kada su vrata u zaključanom stanju mogu se dogoditi još dva moguća stanja. Jedno od stanja je otvaranje vrata bez ubacivanja novčića prilikom čega će automat vrata ostaviti u zaključanom stanju te osobi neće dopustiti prolaz. Drugo stanje prilikom zaključanih vrata je da osoba ubaci novčić prilikom čega će vrata(automat) prijeći u stanje otvorenih vrata te dopustiti prolaz osobi. U otvorenom stanju također su moguća još dva stanja. Jedno od tih stanja je da osoba ponovno ubaci novčić prilikom čega automat neće napraviti ništa te će i dalje ostati u otvorenom stanju, a drugo stanje je da osoba nakon što ubaci novčić i prođe kroz vrata. Tada automat ponovno prelazi u stanje zatvorenih i zaključanih vrata nakon čega čeka ponovno ubacivanje novčića.
+                <img src="Obrtna_vrata.jpg" alt="Slika iz igrice Pac-man" style="height:auto;">
+            </p>
 
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                  <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
