--- a/Uvod.html
+++ b/Uvod.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,11 +28,12 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -41,23 +42,23 @@
 
         <section>
             <h1>Uvod</h1>
-         <h2>Deterministički konačni automat</h2>
-		<h3>Moore-ov automat</h3>
-<p>Mooreov automat je konačni automat kojem je izlazna funkcija ne ovisi u o ulazu tog stroja već se pridružuje trenutnom stanju stroja. Dobio je naziv po njegovom osnivatelju Edwardu F. Moore-u.</p>
-<h3>Mooly-ev automat</h3>
-<p>Mooley-ev automat u usporedbi sa Moore-ovim izlaznu funkciju pridružuje ulaznom znaku te stanju i tako preslikava prijelaze stroja na izlaz.</p>
-<h2>Nedeterministički konačni automat</h2>
-<p>Nedeterministički konačni automat kao i deterministički automat na ulazu prima određeni regularni izraz te prelazi u novo stanje. Međutim nedeterministički automat prilikom prijelaza može prijeći u više novih stanja dok deterministički prelazi u samo jedno novo stanje.</p>
-<h2>Nedeterministički konačni automat s ? prijelaza</h2>
-<p>Nedeterministički konačni automat s ? prijelaza radi isto kao i obični nedeterministički automat, ali ovakav automat može prijeći u novo stanje ili više novih stanja tako da ne dobije nikakav ulaz ili regularni izraz. Ovaj automat zbog toga rijetko se koristi iako nam može biti koristan u određenim slučajevima. </p>
+            <h2>Deterministički konačni automat</h2>
+            <h3>Moore-ov automat</h3>
+            <p>Mooreov automat je konačni automat kojem je izlazna funkcija ne ovisi u o ulazu tog stroja već se pridružuje trenutnom stanju stroja. Dobio je naziv po njegovom osnivatelju Edwardu F. Moore-u.</p>
+            <h3>Mooly-ev automat</h3>
+            <p>Mooley-ev automat u usporedbi sa Moore-ovim izlaznu funkciju pridružuje ulaznom znaku te stanju i tako preslikava prijelaze stroja na izlaz.</p>
+            <h2>Nedeterministički konačni automat</h2>
+            <p>Nedeterministički konačni automat kao i deterministički automat na ulazu prima određeni regularni izraz te prelazi u novo stanje. Međutim nedeterministički automat prilikom prijelaza može prijeći u više novih stanja dok deterministički prelazi u samo jedno novo stanje.</p>
+            <h2>Nedeterministički konačni automat s ? prijelaza</h2>
+            <p>Nedeterministički konačni automat s ? prijelaza radi isto kao i obični nedeterministički automat, ali ovakav automat može prijeći u novo stanje ili više novih stanja tako da ne dobije nikakav ulaz ili regularni izraz. Ovaj automat zbog toga rijetko se koristi iako nam može biti koristan u određenim slučajevima. </p>
 
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                   <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
