--- a/Zakljucak.html
+++ b/Zakljucak.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-  <title>Konačni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <title>Konačni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="omotac">
@@ -28,30 +28,32 @@
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li><a href="Zakljucak.html">Zaključak</a>
-                    <ul>
-                        <a href="Sazetak.html">Sažetak</a>
-                        <a href="Misljenje.html">Mišljenje</a>
-                    </ul>
+                    <li>
+                        <a href="Zakljucak.html">Zaključak</a>
+                        <ul>
+                            <a href="Sazetak.html">Sažetak</a>
+                            <a href="Misljenje.html">Mišljenje</a>
+                        </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
+
         <section>
             <h1>Zaključak</h1>
             <h2>Sažetak</h2>
-<p>Konačni automati dijele se na determinističke, nedeterminističke i nedeterminističke s ? prijelaza. Konačni automat koriste ulaze da bi prešli iz jednog stanja u drugo osim kod nedeterminističkog automata s ? prijelaza koji prelazi u novo stanje i bez ulaza. Upotreba konačnih automata vidljiva je u raznovrsnim područjima poput informatike, računarstva, digitalnih sklopova itd...</p>
-<h2>Mišljenje</h2>
-<p>Konačni automati po meni su jako jednostavni, barem za skužiti njihov princip rada. Iako ne postoje činjenice smatram da je puno više toga oko nas stvoreno uz pomoć principa rada automata čak i mi sami sebe možemo gledati kao konačni automat. Npr. netko nam može reći neku tvrdnju ili događaj kao ulaz nakon čega mi procesiramo to u sebi te odlučujemo hoćemo li tu tvrdnju prihvatiti kao istinu ili nećemo. Još jedan od primjera je kada jedemo zdravu i nezdravu hranu. Prilikom jedenja zdrave hrane mi ćemo s takvim ulazom početi gubiti kile dok kod ulaza nezdrave hrane dat ćemo potpuno suprotni izlaz te se udebljati. Naravno postoji još puno primjera, no na kraju krajeva to je samo moja mašta.</p>
+            <p>Konačni automati dijele se na determinističke, nedeterminističke i nedeterminističke s ? prijelaza. Konačni automat koriste ulaze da bi prešli iz jednog stanja u drugo osim kod nedeterminističkog automata s ? prijelaza koji prelazi u novo stanje i bez ulaza. Upotreba konačnih automata vidljiva je u raznovrsnim područjima poput informatike, računarstva, digitalnih sklopova itd...</p>
+            <h2>Mišljenje</h2>
+            <p>Konačni automati po meni su jako jednostavni, barem za skužiti njihov princip rada. Iako ne postoje činjenice smatram da je puno više toga oko nas stvoreno uz pomoć principa rada automata čak i mi sami sebe možemo gledati kao konačni automat. Npr. netko nam može reći neku tvrdnju ili događaj kao ulaz nakon čega mi procesiramo to u sebi te odlučujemo hoćemo li tu tvrdnju prihvatiti kao istinu ili nećemo. Još jedan od primjera je kada jedemo zdravu i nezdravu hranu. Prilikom jedenja zdrave hrane mi ćemo s takvim ulazom početi gubiti kile dok kod ulaza nezdrave hrane dat ćemo potpuno suprotni izlaz te se udebljati. Naravno postoji još puno primjera, no na kraju krajeva to je samo moja mašta.</p>
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                 <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
