--- a/Upotreba_konacnih_automata_u_igricama.html
+++ b/Upotreba_konacnih_automata_u_igricama.html
@@ -58,7 +58,7 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveučilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Sveučilište:<a style="color:darkgray" href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
                 <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
